# galacticus

./: .fortls  .gitattributes  .gitconfig  .gitignore  .hgsigs  .readthedocs.yaml  .yamllint  CITATION.cff  CITATION_REPORT.md  CONTRIBUTING.md  Dockerfile  Gemfile  Install.sh  Makefile  README.md  Singularity  XMLparser.py  XMLparserV.py  _config.yml  bibliographyChanges.md  dashboard.md  emissionLines_test.xml  galacticus.hdf5  galacticus.py  index.md  isolatedHaloParameters.xml  isolatedHaloParametersDDM.xml  isolatedHaloTree.xml  parameters.xml  parametersAlpha.xml  parameters_MW.xml  pyproject.toml  pytest.ini  test.xml  wiki.patch
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
_data/: metrics.yml
assets/: validation.css  validation.js
aux/: dependencies.yml  words.aff  words.dict
constraints/: acceptanceRate.pl  bieGalacticus.pl  bieGalacticusWrapper.pl  constrainGalacticus.pl  constrainGalacticusWrapper.pl  convergenceGelmanRubin.pl  evaluateLikelihood.pl  fitMultivariateNormal.pl  galacticusLikelihood.pl  maximumLikelihoodModel.pl  posteriorPredictiveChecks.pl  projectionPursuit.pl  storeConfiguration.pl  testConvergence.pl  testModelAccuracy.pl
data/: Atomic_Data.xml  Black_Hole_Mass_vs_Galaxy_Properties.xml  Black_Hole_Mass_vs_Galaxy_Properties_Feoli_Mancini_2009.xml  Chemical_Database.cml  Cosmic_Background_Radiation_Haardt_Madau_2005_Quasars.xml  Cosmic_Background_Radiation_Haardt_Madau_2005_Quasars_Galaxies.xml  Cosmological_Parameters_WMAP-7.xml  Disk_Sizes_Dejong_2000.xml  Galacticus_Compute_Fit_Analyses.xml  Galaxy_Number_Counts_850mu.xml  Halo_Concentrations_Fit_Gao_2008.xml  K_Luminosity_Function_Cole_2001.xml  Molecular_Database.cml  SDSS_Gas_Phase_Metallicities.xml  SSP_Spectra_Maraston_hbMorphologyRed_imfKroupa.hdf5  SSP_Spectra_Maraston_hbMorphologyRed_imfSalpeter.hdf5  Solar_Composition.xml  Star_Formation_Rate_Data.xml  Stellar_C_Yield_Chabrier.xml  Stellar_C_Yield_Kennicutt.xml  Stellar_C_Yield_Kroupa.xml  Stellar_C_Yield_MillerScalo.xml  Stellar_C_Yield_Salpeter.xml  Stellar_C_Yield_Scalo.xml  Stellar_Ca_Yield_Chabrier.xml  Stellar_Ca_Yield_Kennicutt.xml  Stellar_Ca_Yield_Kroupa.xml  Stellar_Ca_Yield_MillerScalo.xml  Stellar_Ca_Yield_Salpeter.xml  Stellar_Ca_Yield_Scalo.xml  Stellar_Energy_Input_Chabrier.xml  Stellar_Energy_Input_Kennicutt.xml  Stellar_Energy_Input_Kroupa.xml  Stellar_Energy_Input_MillerScalo.xml  Stellar_Energy_Input_Salpeter.xml  Stellar_Energy_Input_Scalo.xml  Stellar_Fe_Yield_Chabrier.xml  Stellar_Fe_Yield_Kennicutt.xml  Stellar_Fe_Yield_Kroupa.xml  Stellar_Fe_Yield_MillerScalo.xml  (+39 more)
doc/: About.tex  Acknowledgements.tex  Acknowledgments.tex  Additional_Outputs.tex  Advanced.tex  Analyze.tex  Auxilliary.tex  Bibliography_Demangle.pl  Coding.tex  Components.tex  Constraints.tex  Definitions.tex  Development.tex  Functions.tex  Galacticus.bib  Galacticus.isty  Galacticus.tex  Galacticus_Development.tex  Galacticus_Physics.tex  Galacticus_Source.tex  Galacticus_Usage.tex  Glossary.tex  Input_Data.tex  Installation.tex  MergerTreeBuilder.tex  MergerTreeFileFormat.tex  MergerTreeFileFormatContainer.tex  Methods.tex  Numerics.tex  Parameters.tex  Physics.tex  Plotting.tex  Python_Interface.tex  Running.tex  Source_Documentation.tex  Troubleshooting.tex  Tutorials.tex  bibliographyDemangle.py  commands.tex  pythonInterface.tex
docs/: .gitignore  Galacticus.bib  Glossary.tex  conf.py  index.rst  requirements.txt
flowcharts/: engine.md
groups/: baryonicSuppression.md  convergence.md  cozmicWDM.md  decayingDM.md  dmoSubhalos.md  haloMassFunction.md  idealizedSubhalos.md  meta.md  milkyWayModel.md  strongLensing.md  symphonyCDM.md
parameters/: accretion_disks.spectra.Hopkins2007.build_file.xml  baryonicPhysicsConfig.xml  baryonicPhysicsConstrained.xml  buildCloudyCIETables.xml  buildTools.xml  emissionLines_test.xml  localGroupDatabaseUpdate.xml  mergerTreeFileBuildMillennium.xml  mergerTreeFileBuildMillenniumII.xml  mergerTreeFileBuildSimple.xml  new_k50_slope_test_ETHOS.xml  new_k50_slope_test_ETHOS_updated.xml  optimalSamplingStellarMassFunction.xml  parametersAlpha.xml  parametersProfile.xml  parametersProfileLarge.xml  quickTest.haloMassFunction.xml  quickTest.xml  report.xml  treeAugmentMonteCarlo.xml  treeAugmentNBody.xml
perl/: Cloudy.pm  CosmoSim.pm  Mangle.pm
plots/: cooling_function.pl  cooling_function.py
python/: cloudy.py  conftest.py  emulator_utils.py  latex_spellcheck.py  latex_utils.py  list_utils.py  queueManager.py  validate.py  validateHaloMassFunction.py
schema/: addMetaProperty.xsd  allocate.xsd  commonTypes.xsd  componentSchema.xsd  conditionalCall.xsd  constant.xsd  constructorAssign.xsd  deepCopy.xsd  deepCopyActions.xsd  deepCopyFinalize.xsd  deepCopyReset.xsd  dependenciesInitialize.xsd  enumeration.xsd  eventHook.xsd  eventHookManager.xsd  eventHookStatic.xsd  expiry.xsd  forEach.xsd  functionClass.xsd  functionGlobal.xsd  functionsGlobal.xsd  generic.xsd  inputParameter.xsd  inputParametersValidate.xsd  metaPropertyDatabase.xsd  methods.xsd  objectBuilder.xsd  objectDestructor.xsd  optionalArgument.xsd  parameterMigration.xsd  parameters.xsd  referenceAcquire.xsd  referenceConstruct.xsd  referenceCountIncrement.xsd  scoping.xsd  sourceDigest.xsd  stateRestore.xsd  stateStorable.xsd  stateStore.xsd  workaround.xsd
scripts/: add_units_overrides.py  replace_normalfont_ttfamily.py
source/: .nodes.operators.physics.dark_matter.SIDM_parametric.F90.swn  ANN.cpp  Bolshoi_Merger_Tree_File_Maker.F90  Conditional_Mass_Function.F90  Conditional_Stellar_Mass_Function.F90  Constrain_Galacticus.F90  Excursion_Sets.F90  Galacticus.F90  Halo_Mass_Functions.F90  Halo_Model_Mock.F90  Mass_Function_Covariance.F90  Millennium_Merger_Tree_File_Maker.F90  Mocks_Correlation_Functions.F90  Optimal_Sampling.Stellar_Mass_Function.F90  Output_Units.F90  Power_Spectra.F90  Projected_Correlation_Function.F90  Simple_Merger_Tree_File_Maker.F90  XRay_Absorption_ISM_Wilms2000.F90  access.c  accretion.Bondi_Hoyle_Lyttleton.F90  accretion.disks.F90  accretion.halo.Bertschinger.F90  (+2798 more)
(+4953 files in other folders)
