[build-system]
requires = ["setuptools>=82.0.1", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "galacticus"
# Version is derived from git tags by setuptools_scm (see [tool.setuptools_scm]
# below). Tag a release `vX.Y.Z` to publish 0.0.0+... dev builds otherwise.
dynamic = ["version"]
description = "Install and run the Galacticus semi-analytic galaxy formation model."
readme = "README.md"
license = {file = "COPYING"}
requires-python = ">=3.10"
authors = [
    {name = "Andrew Benson"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
# Core runtime dependencies actually imported by code under python/ and
# scripts/ that the build system invokes.  Versions intentionally
# unpinned for now -- if reproducibility becomes a goal, add a separate
# requirements-lock.txt produced via pip-tools or pip freeze.
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "lxml",
    "matplotlib",
    "requests",
    "PyYAML",
    "GitPython",
    "termcolor",
    "platformdirs",
]

[project.optional-dependencies]
# Emulator pipelines (scripts/emulation/, tested in cicd.yml).  Heavy
# transitive dependencies (TensorFlow, lenstronomy) so kept opt-in.
emulation = [
    "tensorflow",
    "tensorflow-probability",
    "tf-keras",
    "lenstronomy",
    "tqdm",
    "colossus",
    "mcfit",
    "samana",
]
test = [
    "pytest",
]
lint = [
    "mypy",
    "pyflakes",
]
# Editor/IDE tooling for developing Galacticus (see the "Editor Setup" page in
# the developer guide).  Not needed to run or build Galacticus, so kept opt-in:
#   pip install -e .[editor]
#   * fortls   -- Fortran language server (used by the VSCode Modern Fortran
#                 extension for go-to-definition, hover, completion).
#   * findent  -- Fortran indenter, for hand-indenting selections of *pure*
#                 Fortran only (it corrupts embedded !![...]/!!{RST...} blocks).
editor = [
    "fortls",
    "findent",
]

[project.scripts]
# End-user launcher: `galacticus run model.xml`, `galacticus install`, etc.
galacticus = "galacticus_launcher.cli:main"

[project.urls]
Homepage      = "https://github.com/galacticusorg/galacticus"
Documentation = "https://galacticus.readthedocs.io/"
Wiki          = "https://github.com/galacticusorg/galacticus/wiki"
Issues        = "https://github.com/galacticusorg/galacticus/issues"

# ----------------------------------------------------------------------
# Versioning: setuptools_scm derives the version from git tags so PyPI
# releases are immutable and reproducible.  A clean `vX.Y.Z` tag yields
# version `X.Y.Z`; untagged/dev checkouts get a `0.0.0.devN` version,
# which the launcher treats as "track bleeding-edge".  The fallback keeps
# builds working in a tarball with no .git present.
#
# `local_scheme = "no-local-version"` omits the `+g<hash>` local segment.
# PyPI/TestPyPI reject any local version identifier (a `+...` suffix), so
# this is required for dev builds to be uploadable (e.g. the TestPyPI dry
# run); a clean tagged release has no local segment either way.
# ----------------------------------------------------------------------
[tool.setuptools_scm]
fallback_version = "0.0.0"
version_scheme   = "no-guess-dev"
local_scheme     = "no-local-version"

# The repository carries non-version tags (e.g. `publication/doi/10.1103/...`).
# Require version tags to start with `v`, so the `git describe --match` glob
# becomes `v*[0-9]*` and the DOI tags are ignored -- otherwise the default match
# (`*[0-9]*`) selects a DOI tag and the build fails with "Can't parse version
# from tag". `strict = false` keeps `vX`/`vX.Y`/`vX.Y.Z` all valid and silences
# the future-default warning.
[tool.setuptools_scm.tag]
prefix = "v"
strict = false

# ----------------------------------------------------------------------
# setuptools layout: source lives under python/ rather than alongside
# pyproject.toml at the repo root, so we tell setuptools to treat python/
# as the package root.  `find` then discovers Galacticus, Fortran,
# LibraryInterfaces, List, Sort, XML, and build.  The handful of loose
# top-level modules under python/ are listed via `py-modules`.
# ----------------------------------------------------------------------
[tool.setuptools]
package-dir = {"" = "python"}
py-modules  = [
    "cloudy",
    "queueManager",
    "validate",
    "emulator_utils",
    "latex_utils",
]

[tool.setuptools.packages.find]
where    = ["python"]
exclude  = ["*.tests", "*.tests.*", "tests", "tests.*"]

# ----------------------------------------------------------------------
# mypy: permissive defaults so partially-annotated code doesn't drown the
# user in noise.  Annotations were added in 2026 starting with the public
# `__all__` surface (List, Sort, XML, Galacticus.Build's small public
# modules, the loose top-level utilities, and a minimal `build: dict`
# stamp on the Components/* hook validators).  Heavy `build`-dict
# machinery under SourceTree.Process and the rest of Components/* is
# intentionally left unannotated.  See the "Where type hints help"
# discussion in the audit for the rationale.
# ----------------------------------------------------------------------
[tool.mypy]
python_version           = "3.10"
ignore_missing_imports   = true
disallow_untyped_defs    = false
warn_unused_ignores      = true
warn_redundant_casts     = true
exclude                  = ['/tests/', 'galacticus\.py']
